<resources>
    <string name="app_name">1101test</string>
    <string name="clear">CLEAR</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="result">=</string>
    <string name="div">/</string>





</resources>