<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EXAM"
        android:layout_gravity="left"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Clear"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:onClick="clkClear"
            android:text="@string/clear" />
        <Button
            android:id="@+id/Div"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:onClick="clkBtn"
            android:layout_weight="1"

            android:text="@string/div"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Btn7"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"

            android:text="@string/btn7"/>
        <Button
            android:id="@+id/Btn8"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"

            android:text="@string/btn8"/>
        <Button
            android:id="@+id/Btn9"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"
            android:text="@string/btn9"/>
        <Button
            android:id="@+id/Mul"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"
            android:text="@string/mul"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Btn4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"
            android:text="@string/btn4"/>
        <Button
            android:id="@+id/Btn5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"
            android:text="@string/btn5"/>
        <Button
            android:id="@+id/Btn6"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"
            android:text="@string/btn6"/>

        <Button
            android:id="@+id/Sub"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="clkBtn"
            android:text="@string/sub" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/Btn1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="clkBtn"
                android:text="@string/btn1"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="clkBtn"
                android:text="@string/btn0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <Button
                    android:id="@+id/Btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:onClick="clkBtn"
                    android:layout_weight="1"
                    android:text="@string/btn2"/>
                <Button
                    android:id="@+id/Btn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:onClick="clkBtn"
                    android:layout_weight="1"
                    android:text="@string/btn3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <Button
                    android:id="@+id/Result"
                    android:layout_width="0dp"
                    android:onClick="clkBtn"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/result"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/Sum"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:onClick="clkBtn"
                android:text="@string/sum"/>
        </LinearLayout>



    </LinearLayout>


    </LinearLayout>



